package Jeu.Element;

public class Terre extends Affinite {

    public Terre(){
        super("Terre");
        m_avantage = "Eau" ;
        m_faiblesse = "Air" ;
    }

    @Override
    public String getAvantage() {
        return m_avantage;
    }

    @Override
    public String getFaiblesse() {
        return m_faiblesse;
    }
    @Override
    public String getNom() {
        return m_nom;
    }
}
