package Jeu.Partie.Joueurs;

public class Adversaire extends Joueur {
}
